--- a/frontend-reactjs/src/App.css
+++ b/frontend-reactjs/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #c5d2ec;
   /* min-height: 100vh; */
   /* display: flex; */
   /* flex-direction: column; */
