--- a/frontend-reactjs/src/App.css
+++ b/frontend-reactjs/src/App.css
@@ -1,22 +1,33 @@
 .App {
-  text-align: center;
-}
+  min-height: 100vh;
+  position: relative;
 
-.App-logo {
-  height: 40vmin;
+  /* padding-bottom: 3rem; */
 }
 
 .App-header {
-  background-color: #c5d2ec;
-  /* min-height: 100vh; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #333333;
+  background-color: rgb(51, 51, 51);
 }
 
-.App-link {
-  color: #09d3ac;
+.App-main {
+  padding-bottom: 3rem;
+/* 
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.App-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #333333;
+  color: #fff;
 }
