--- a/frontend-reactjs/src/components/navigation/styles.css
+++ b/frontend-reactjs/src/components/navigation/styles.css
@@ -1,10 +1,18 @@
+.navigation-container {
+  padding: 2rem 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .navigation-container a,
-.navigation-container button,
-.greeting-message {
-  margin: 0.5rem;
+.navigation-container button {
+  /* margin: 0.5rem; */
   text-decoration: none;
-  color: coral;
+  color: rgb(235, 235, 250);
   font-size: 1.6rem;
+
+  border-bottom: 1px solid rgb(51, 51, 51);
 }
 
 .navigation-container button {
@@ -15,6 +23,27 @@
   cursor: pointer;
 }
 
+.navigation-container a:hover,
+.navigation-container button:hover {
+  border-bottom: 1px solid rgb(235, 235, 250);
+}
+
 .navigation-container .activeNav {
-  color: rgb(0, 38, 255);
+  color: rgb(146, 162, 255);
+  border-bottom: 1px solid rgb(146, 162, 255);
+}
+
+.navigation-container .activeNav:hover{
+  border-color: rgb(146, 162, 255);
+}
+
+.navigation-products-links a {
+  display: inline-block;
+  margin-right: 2rem;
+}
+
+.navigation-auth-links a,
+.navigation-auth-links button {
+  display: inline-block;
+  margin-left: 2rem;
 }
