--- a/frontend-reactjs/src/components/productCard/styles.css
+++ b/frontend-reactjs/src/components/productCard/styles.css
@@ -1,3 +1,32 @@
 .product-card {
-  border: 2px solid black;
+  padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+
+  border: 1px solid rgb(151, 151, 181);
+  border-radius: 0.5rem;
+
+  background-color: #fff;
+
+  transition: box-shadow 0.2s;
+}
+
+.product-card:hover {
+  box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.4);
+}
+
+.product-card-description,
+.product-card-price {
+  padding-top: 0.5rem;
+}
+
+.product-card-buttons {
+  padding: 0.5rem 0;
+}
+
+.product-card-buttons button:first-child {
+  margin-right: 0.3rem;
 }
