--- a/frontend-reactjs/src/App.css
+++ b/frontend-reactjs/src/App.css
@@ -1,28 +1,35 @@
 .App {
   min-height: 100vh;
   position: relative;
-
-  /* padding-bottom: 3rem; */
 }
 
 .App-header {
-  background-color: #333333;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
   background-color: rgb(51, 51, 51);
 }
 
 .App-main {
-  padding-bottom: 3rem;
-/* 
+  /* padding-bottom is same size as the footer height */
+  padding-bottom: 4rem;
+  min-height: calc(100vh - 14rem);
+
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
+
+  background: linear-gradient(to bottom,rgba(235, 235, 250, 0.96), rgba(235, 235, 250, 0.96)), url("https://res.cloudinary.com/dq2snomti/image/upload/v1574841569/softuni-reactjs-project/home-background_rpby83.jpg") center / cover no-repeat;
 }
 
 .App-footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 3rem;
+  height: 4rem;
 
   display: flex;
   justify-content: center;
