--- a/frontend-reactjs/src/components/navigation/styles.css
+++ b/frontend-reactjs/src/components/navigation/styles.css
@@ -1,5 +1,6 @@
 .navigation-container {
-  padding: 2rem 3rem;
+  /* padding: 2rem 3rem; */
+  width: 80%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,7 +11,7 @@
   /* margin: 0.5rem; */
   text-decoration: none;
   color: rgb(235, 235, 250);
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 
   border-bottom: 1px solid rgb(51, 51, 51);
 
