--- a/frontend-reactjs/src/components/productCard/styles.css
+++ b/frontend-reactjs/src/components/productCard/styles.css
@@ -1,3 +1,14 @@
+@keyframes product-card-show {
+  0%   { 
+    opacity: 0;
+    transform: scale(1.02);
+  }
+  100% { 
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 .product-card {
   padding: 1rem;
 
@@ -8,10 +19,10 @@
 
   border: 1px solid rgb(151, 151, 181);
   border-radius: 0.5rem;
-
   background-color: #fff;
-
+  
   transition: box-shadow 0.2s;
+  animation: product-card-show 0.3s ease-in;
 }
 
 .product-card:hover {
