--- a/frontend-reactjs/src/components/home/styles.css
+++ b/frontend-reactjs/src/components/home/styles.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.home-page span{
+.home-page span {
   color: rgb(146, 162, 255);
 }
 
@@ -12,4 +12,14 @@
 
 .home-page h2 {
   font-size: 2rem;
+}
+
+@media (max-width: 1400px) {
+  .home-page h1 {
+    font-size: 4rem;
+  }
+
+  .home-page h2 {
+    font-size: 2rem;
+  }
 }
