--- a/frontend-reactjs/src/components/products-list/styles.css
+++ b/frontend-reactjs/src/components/products-list/styles.css
@@ -1,7 +1,13 @@
 .products-list {
-  width: 65%;
+  width: 70%;
   margin: 2rem auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1vw;
+}
+
+@media only screen and (min-width: 1400px) {
+  .products-list {
+    width: 65%;
+  }
 }
