--- a/frontend-reactjs/src/App.css
+++ b/frontend-reactjs/src/App.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   background-color: rgb(51, 51, 51);
 }
 
@@ -24,20 +24,28 @@
   align-items: center;
 }
 
-.App-main.home{
-  background: linear-gradient(to bottom,rgba(235, 235, 250, 0.95), rgba(235, 235, 250, 0.95)), url("https://res.cloudinary.com/dq2snomti/image/upload/v1574841569/softuni-reactjs-project/home-background_rpby83.jpg") center / cover no-repeat;
+.App-main.home {
+  background: linear-gradient(to bottom, rgba(235, 235, 250, 0.95), rgba(235, 235, 250, 0.95)),
+    url("https://res.cloudinary.com/dq2snomti/image/upload/v1574841569/softuni-reactjs-project/home-background_rpby83.jpg")
+      center / cover no-repeat;
 }
 
-.App-main.products-tv{
-  background: linear-gradient(to bottom,rgba(235, 235, 250, 0.92), rgba(235, 235, 250, 0.92)), url("https://res.cloudinary.com/dq2snomti/image/upload/v1574928213/softuni-reactjs-project/tv6_aboxtv.jpg") center / cover no-repeat;
+.App-main.products-tv {
+  background: linear-gradient(to bottom, rgba(235, 235, 250, 0.92), rgba(235, 235, 250, 0.92)),
+    url("https://res.cloudinary.com/dq2snomti/image/upload/v1574928213/softuni-reactjs-project/tv6_background_aboxtv")
+      center / cover no-repeat;
 }
 
-.App-main.products-laptop{
-  background: linear-gradient(to bottom,rgba(235, 235, 250, 0.92), rgba(235, 235, 250, 0.92)), url("https://res.cloudinary.com/dq2snomti/image/upload/v1574923948/softuni-reactjs-project/laptops1-background_hnnc3d.jpg") center / cover no-repeat;
+.App-main.products-laptop {
+  background: linear-gradient(to bottom, rgba(235, 235, 250, 0.92), rgba(235, 235, 250, 0.92)),
+    url("https://res.cloudinary.com/dq2snomti/image/upload/v1574923948/softuni-reactjs-project/laptops1-background_hnnc3d.jpg")
+      center / cover no-repeat;
 }
 
-.App-main.products-phone{
-  background: linear-gradient(to bottom,rgba(235, 235, 250, 0.92), rgba(235, 235, 250, 0.92)), url("https://res.cloudinary.com/dq2snomti/image/upload/v1574924407/softuni-reactjs-project/phones1_jrjoie.jpg") center / cover no-repeat;
+.App-main.products-phone {
+  background: linear-gradient(to bottom, rgba(235, 235, 250, 0.92), rgba(235, 235, 250, 0.92)),
+    url("https://res.cloudinary.com/dq2snomti/image/upload/v1574924407/softuni-reactjs-project/phones1_background_jrjoie.jpg")
+      center / cover no-repeat;
 }
 
 .App-footer {
