--- a/frontend-reactjs/src/App.css
+++ b/frontend-reactjs/src/App.css
@@ -50,6 +50,12 @@
       center / cover no-repeat;
 }
 
+.App-main.search {
+  background: linear-gradient(to bottom, rgba(235, 235, 250, 0.95), rgba(235, 235, 250, 0.95)),
+    url("https://res.cloudinary.com/dq2snomti/image/upload/v1574841569/softuni-reactjs-project/home-background_rpby83.jpg")
+      center / cover no-repeat;
+}
+
 .App-footer {
   position: absolute;
   bottom: 0;
